made changes to the work.html file. imported the videos

--- a/website/work.html
+++ b/website/work.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/video-gallery.js"></script>
 </head>
 <body>
     <!-- Navigation -->
@@ -61,40 +62,119 @@
 
         <!-- Video Gallery -->
         <section class="video-gallery container">
-            <!-- Project 1 -->
+            <!-- Project 1 - Cafephilia -->
             <div class="video-item" data-category="commercial">
                 <div class="video-thumbnail">
-                    <img src="https://images.unsplash.com/photo-1579033385971-a7bc8a2e6b82?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="Coffee Shop Commercial">
+                    <video preload="none">
+                        <source src="../video/CAFEPHILIA FINAL COMPLETIONE.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
                     <div class="play-button">
                         <i class="fas fa-play"></i>
                     </div>
                 </div>
                 <div class="video-info">
                     <h3>Caféphilia Promotional</h3>
-                    <p>A stylish commercial for a local coffee shop showcasing their atmosphere and products.</p>
+                    <p>A stylish commercial showcasing the atmosphere and artisanal coffee experience.</p>
                     <span class="video-category">Commercial</span>
                 </div>
             </div>
 
-            <!-- Project 2 -->
-            <div class="video-item" data-category="wedding">
+            <!-- Project 2 - Renegade Gym -->
+            <div class="video-item" data-category="commercial">
                 <div class="video-thumbnail">
-                    <img src="https://images.unsplash.com/photo-1511285560929-80b456fea0bc?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="Wedding Video">
+                    <video preload="none">
+                        <source src="../video/renegade gym promo CG.mov" type="video/quicktime">
+                        Your browser does not support the video tag.
+                    </video>
                     <div class="play-button">
                         <i class="fas fa-play"></i>
                     </div>
                 </div>
                 <div class="video-info">
-                    <h3>Sarah & Michael's Wedding</h3>
-                    <p>A cinematic wedding film capturing the emotions and beauty of their special day.</p>
-                    <span class="video-category">Wedding</span>
+                    <h3>Renegade Gym Promo</h3>
+                    <p>Dynamic promotional video highlighting the energy and facilities of Renegade Gym.</p>
+                    <span class="video-category">Commercial</span>
                 </div>
             </div>
 
-            <!-- Project 3 -->
+            <!-- Project 3 - Birthday Event -->
+            <div class="video-item" data-category="event">
+                <div class="video-thumbnail">
+                    <video preload="none">
+                        <source src="../video/AL'S 30TH BIRTHDAY FINISHED CG.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    <div class="play-button">
+                        <i class="fas fa-play"></i>
+                    </div>
+                </div>
+                <div class="video-info">
+                    <h3>30th Birthday Celebration</h3>
+                    <p>Capturing the joy and excitement of a milestone birthday celebration.</p>
+                    <span class="video-category">Event Coverage</span>
+                </div>
+            </div>
+
+            <!-- Project 4 - FK3 Stallion -->
+            <div class="video-item" data-category="music">
+                <div class="video-thumbnail">
+                    <video preload="none">
+                        <source src="../video/FK3 - STALLION .mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    <div class="play-button">
+                        <i class="fas fa-play"></i>
+                    </div>
+                </div>
+                <div class="video-info">
+                    <h3>FK3 - Stallion</h3>
+                    <p>Music video production showcasing artistic vision and dynamic cinematography.</p>
+                    <span class="video-category">Music Video</span>
+                </div>
+            </div>
+
+            <!-- Project 5 - Logo Animation -->
             <div class="video-item" data-category="commercial">
                 <div class="video-thumbnail">
-                    <img src="https://images.unsplash.com/photo-1609921212029-bb5a28e60960?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="Freedom Beer Commercial">
+                    <video preload="none">
+                        <source src="../video/LOGO FLIP ANIMATION IG.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    <div class="play-button">
+                        <i class="fas fa-play"></i>
+                    </div>
+                </div>
+                <div class="video-info">
+                    <h3>Logo Animation</h3>
+                    <p>Creative motion graphics and logo animation for social media.</p>
+                    <span class="video-category">Commercial</span>
+                </div>
+            </div>
+
+            <!-- Project 6 - Unilite MTB -->
+            <div class="video-item" data-category="commercial">
+                <div class="video-thumbnail">
+                    <video preload="none">
+                        <source src="../video/UNILITE MTB - 5300.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    <div class="play-button">
+                        <i class="fas fa-play"></i>
+                    </div>
+                </div>
+                <div class="video-info">
+                    <h3>Unilite MTB</h3>
+                    <p>Dynamic product showcase featuring mountain biking equipment in action.</p>
+                    <span class="video-category">Commercial</span>
+                </div>
+            </div>
+            <div class="video-item" data-category="commercial">
+                <div class="video-thumbnail">
+                    <video poster="videos/thumbnails/freedom-beer-thumb.jpg" preload="none">
+                        <source src="videos/FREEDOM BEER.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
                     <div class="play-button">
                         <i class="fas fa-play"></i>
                     </div>
@@ -105,63 +185,7 @@
                     <span class="video-category">Commercial</span>
                 </div>
             </div>
-
-            <!-- Project 4 -->
-            <div class="video-item" data-category="music">
-                <div class="video-thumbnail">
-                    <img src="https://images.unsplash.com/photo-1470225620780-dba8ba36b745?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="Music Video">
-                    <div class="play-button">
-                        <i class="fas fa-play"></i>
-                    </div>
-                </div>
-                <div class="video-info">
-                    <h3>Summer Fever Music Video</h3>
-                    <p>A vibrant music video for an emerging artist with creative visual storytelling.</p>
-                    <span class="video-category">Music Video</span>
-                </div>
-            </div>
-
-            <!-- Project 5 -->
-            <div class="video-item" data-category="event">
-                <div class="video-thumbnail">
-                    <img src="https://images.unsplash.com/photo-1540575467063-178a50c2df87?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="Birthday Event">
-                    <div class="play-button">
-                        <i class="fas fa-play"></i>
-                    </div>
-                </div>
-                <div class="video-info">
-                    <h3>Birthday Celebration</h3>
-                    <p>A fun and energetic coverage of a milestone birthday celebration.</p>
-                    <span class="video-category">Event Coverage</span>
-                </div>
-            </div>
-
-            <!-- Project 6 -->
-            <div class="video-item" data-category="documentary">
-                <div class="video-thumbnail">
-                    <img src="https://images.unsplash.com/photo-1583324113626-70df0f4deaab?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="Documentary">
-                    <div class="play-button">
-                        <i class="fas fa-play"></i>
-                    </div>
-                </div>
-                <div class="video-info">
-                    <h3>Urban Stories Documentary</h3>
-                    <p>A short documentary exploring the lives of urban artists in the city.</p>
-                    <span class="video-category">Documentary</span>
-                </div>
-            </div>
         </section>
-
-        <!-- Video Modal -->
-        <div class="video-modal" id="videoModal">
-            <div class="modal-content">
-                <span class="close-modal">&times;</span>
-                <video controls id="modalVideo">
-                    <!-- Video source will be added dynamically -->
-                    Your browser does not support the video tag.
-                </video>
-            </div>
-        </div>
     </main>
 
     <!-- Footer -->
