Added the Video Modal HTML: I've added the video modal structure directly to the HTML file instead of having JavaScript create it. This ensures the modal is available when the page loads.
Enhanced Video Thumbnails: Each video thumbnail now includes:

A loading indicator (spinner icon)

Proper accessibility attributes

Metadata preloading for better performance

No Results Message: Added a proper "no results" message that will be shown when filtering returns no videos.

Structure Improvements: Cleaned up the HTML structure for better readability and maintainability.

--- a/website/work.html
+++ b/website/work.html
@@ -215,6 +215,20 @@
         </div>
     </main>
 
+    <!-- Video Modal (will be shown when a video is played) -->
+    <div id="videoModal" class="video-modal">
+        <div class="modal-content">
+            <span class="close-modal">&times;</span>
+            <video id="modalVideo" controls>
+                Your browser does not support the video tag.
+            </video>
+            <div class="video-info-modal">
+                <h3 id="modalVideoTitle"></h3>
+                <p id="modalVideoDescription"></p>
+            </div>
+        </div>
+    </div>
+
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-container">
