--- a/website/book.html
+++ b/website/book.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Book - Breazy Productions</title>
 
-  <!-- Main stylesheet (your provided CSS) -->
+  <!-- Main stylesheet -->
   <link rel="stylesheet" href="css/style.css">
 
   <!-- Icons -->
@@ -107,41 +107,53 @@
 
   <!-- Footer -->
   <footer class="footer">
-        <div class="footer-container">
-            <div class="footer-logo">
-                <img src="images/logo.png" alt="Breazy Productions Logo">
-            </div>
-
-            <div class="footer-links">
-                <div class="footer-nav">
-                    <h4>Navigation</h4>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="work.html" class="active">Work</a></li>
-                        <li><a href="book.html">Book</a></li>
-                    </ul>
-                </div>
-
-                <div class="footer-social">
-                    <h4>Follow</h4>
-                    <ul>
-                        <li><a href="#"><i class="fab fa-instagram"></i> Instagram</a></li>
-                        <li><a href="#"><i class="fab fa-tiktok"></i> TikTok</a></li>
-                    </ul>
-                </div>
-
-                <div class="footer-contact">
-                    <h4>Contact</h4>
-                    <ul>
-                        <li><a href="mailto:Breazyproductions7@gmail.com">Breazyproductions7@gmail.com</a></li>
-                        <li><a href="tel:+44772846189">+44 7728 46189</a></li>
-                    </ul>
-                </div>
-            </div>
-            
-            <div class="footer-bottom">
-                <p>&copy; 2024 Breazy Productions. All rights reserved. Developed by James Gomez</p>
-            </div>
+    <div class="footer-container">
+      <div class="footer-content">
+        <div class="footer-logo">
+          <img src="images/logo.png" alt="Breazy Productions Logo">
+          <p>Creating cinematic stories that stand the test of time.</p>
         </div>
-    </footer>
+
+        <div class="footer-links">
+          <div class="footer-nav">
+            <h4>Navigation</h4>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="work.html">Work</a></li>
+              <li><a href="book.html" class="active">Book</a></li>
+              <li><a href="terms.html">Terms & Conditions</a></li>
+            </ul>
+          </div>
+
+          <div class="footer-social">
+            <h4>Follow Us</h4>
+            <div class="social-icons">
+              <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+              <a href="#" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
+              <a href="#" aria-label="Vimeo"><i class="fab fa-vimeo-v"></i></a>
+              <a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+            </div>
+          </div>
+
+          <div class="footer-contact">
+            <h4>Contact</h4>
+            <ul>
+              <li><a href="mailto:breazyproductions7@gmail.com"><i class="fas fa-envelope"></i> breazyproductions7@gmail.com</a></li>
+              <li><a href="tel:+44772846189"><i class="fas fa-phone"></i> +44 7728 46189</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      
+      <div class="footer-bottom">
+        <p>&copy; 2024 Breazy Productions. All rights reserved. Developed by James Gomez</p>
+      </div>
+    </div>
+  </footer>
+
+  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+  <script src="js/script.js"></script>
+</body>
+</html>
