--- a/website/index.html
+++ b/website/index.html
@@ -272,7 +272,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2024 Breazy Productions. All rights reserved.</p>
+                <p>&copy; 2024 Breazy Productions. All rights reserved. Developed by James Gomez</p>
             </div>
         </div>
     </footer>
