--- a/website/work.html
+++ b/website/work.html
@@ -250,7 +250,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2024 Jordan's Videography. All rights reserved.</p>
+                <p>&copy; 2024 Breazy Productions. All rights reserved. Developed by James Gomez</p>
             </div>
         </div>
     </footer>
