--- a/website/index.html
+++ b/website/index.html
@@ -11,6 +11,10 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     
+<link rel="stylesheet" href="css/style.css">
+<script src="js/script.js"></script>
+<img src="images/logo.png" alt="Breazy Productions Logo">
+
     <!-- Preload critical resources -->
     <link rel="preload" as="style" href="css/style.css">
     <link rel="preload" as="video" href="videos/vid2.mp4">
