--- a/website/terms.html
+++ b/website/terms.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms & Conditions - James O Gomez</title>
+    <title>Terms & Conditions - Breazy Productions</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/terms.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <!-- Mobile menu button -->
@@ -32,8 +35,8 @@
     <!-- Terms Content -->
     <section class="terms-section">
         <div class="container">
-            <h1>Terms & Conditions</h1>
-            <div class="terms-content">
+            <h1 data-aos="fade-down">Terms & Conditions</h1>
+            <div class="terms-content" data-aos="fade-up" data-aos-delay="200">
                 <h2>1. Booking and Payment</h2>
                 <p>A 50% non-refundable deposit is required to secure your booking date. The remaining balance is due on the day of filming. Payment can be made via bank transfer or cash.</p>
 
@@ -44,7 +47,7 @@
                 <p>Rescheduling is possible with at least 72 hours notice. One free reschedule is permitted; subsequent reschedules may incur additional fees.</p>
 
                 <h2>4. Copyright and Usage</h2>
-                <p>James O Gomez retains copyright of all video content. Clients receive a license for personal/commercial use as agreed upon in the booking. Usage rights will be specified in your booking agreement.</p>
+                <p>Breazy Productions retains copyright of all video content. Clients receive a license for personal/commercial use as agreed upon in the booking. Usage rights will be specified in your booking agreement.</p>
 
                 <h2>5. Delivery Timeline</h2>
                 <p>Standard delivery time for edited videos is 2-3 weeks from the shoot date. Rush delivery may be available for an additional fee.</p>
@@ -64,10 +67,10 @@
                 <h2>10. Privacy Policy</h2>
                 <p>We respect your privacy and will not share your personal information with third parties without your consent. Behind-the-scenes content may be used for portfolio purposes unless otherwise agreed.</p>
 
-                <h2>Contact</h2>
+                <h2>Contact Information</h2>
                 <p>For any questions regarding these terms and conditions, please contact us at:</p>
-                <p>Email: Breazyproductions7@gmail.com</p>
-                <p>Phone: +44 7728 46189</p>
+                <p><i class="fas fa-envelope"></i> Email: <a href="mailto:Breazyproductions7@gmail.com">Breazyproductions7@gmail.com</a></p>
+                <p><i class="fas fa-phone"></i> Phone: <a href="tel:+44772846189">+44 7728 46189</a></p>
 
                 <p class="last-updated">Last Updated: March 2024</p>
             </div>
@@ -109,14 +112,22 @@
                 </div>
             </div>
                 <div class="footer-bottom">
-                    <p>&copy; 2024 James O Gomez. All rights reserved.</p>
+                    <p>&copy; 2024 Breazy Productions. All rights reserved. Developed by James Gomez</p>
                 </div>
         </div>
     </footer>
 
-    <!-- Add Font Awesome for icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <!-- Scripts -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/script.js"></script>
+    <script>
+        // Initialize AOS
+        AOS.init({
+            duration: 1000,
+            once: true,
+            offset: 100
+        });
+    </script>
 </body>
 </html>
 ```
