--- a/work.html
+++ b/work.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Work - Jordan's Videography</title>
+    <!-- Consolidated CSS imports -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    
+    <!-- Deferred scripts -->
+    <script src="js/script.js" defer></script>
+    <script src="js/video-gallery.js" defer></script>
 </head>
 <body>
     <!-- Navigation -->
