Fix mobile menu functionality across all pages - ensure consistent implementation

--- a/book.html
+++ b/book.html
@@ -19,25 +19,27 @@
 </head>
 <body>
   <!-- Navigation -->
-  <nav class="navigation" role="navigation" aria-label="Main navigation">
-    <div class="logo">
-      <a href="index.html" aria-label="Breazy Productions home">
-        <img src="images/logo.png" alt="Breazy Productions logo">
-      </a>
-    </div>
-
-    <div class="nav-links" id="primary-nav" role="menu">
-      <a href="index.html" role="menuitem">Home</a>
-      <a href="about.html" role="menuitem">About</a>
-      <a href="work.html" role="menuitem">Work</a>
-      <a href="book.html" class="active" role="menuitem">Book</a>
-      <a href="terms.html" role="menuitem">Terms &amp; Conditions</a>
-    </div>
-
-    <button class="menu-btn" id="menu-btn" aria-label="Toggle menu" aria-expanded="false">
-      <span class="menu-btn__burger" aria-hidden="true"></span>
-    </button>
-  </nav>
+  <header>
+    <nav class="navigation">
+        <div class="logo">
+            <a href="index.html">
+                <img src="images/logo.png" alt="Breazy Productions Logo">
+            </a>
+        </div>
+        
+        <div class="nav-links">
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="work.html">Work</a>
+            <a href="book.html" class="active">Book</a>
+            <a href="terms.html">Terms</a>
+        </div>
+        
+        <div class="menu-btn" id="menu-btn">
+            <div class="menu-btn__burger"></div>
+        </div>
+    </nav>
+  </header>
 
   <!-- Booking / Contact Intro -->
   <main class="booking-page">
