Fix video paths in work.html to use correct relative paths

--- a/work.html
+++ b/work.html
@@ -69,8 +69,8 @@
             <!-- Project 1 - Cafephilia -->
             <div class="video-item" data-category="commercial">
                 <div class="video-thumbnail">
-                    <video preload="metadata" poster="../video/thumbnails/cafephilia-thumb.jpg">
-                        <source src="../video/CAFEPHILIA FINAL COMPLETIONE.mp4" type="video/mp4">
+                    <video preload="metadata" poster="videos/thumbnails/cafephilia-thumb.jpg">
+                        <source src="videos/CAFEPHILIA FINAL COMPLETIONE.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                     <div class="play-button" aria-label="Play video">
@@ -90,8 +90,8 @@
             <!-- Project 3 - Birthday Event -->
             <div class="video-item" data-category="event">
                 <div class="video-thumbnail">
-                    <video preload="metadata" poster="../video/thumbnails/birthday-thumb.jpg">
-                        <source src="../video/AL'S 30TH BIRTHDAY FINISHED CG.mp4" type="video/mp4">
+                    <video preload="metadata" poster="videos/thumbnails/birthday-thumb.jpg">
+                        <source src="videos/AL'S 30TH BIRTHDAY FINISHED CG.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                     <div class="play-button" aria-label="Play video">
@@ -111,8 +111,8 @@
             <!-- Project 4 - FK3 Stallion -->
             <div class="video-item" data-category="music">
                 <div class="video-thumbnail">
-                    <video preload="metadata" poster="../video/thumbnails/fk3-thumb.jpg">
-                        <source src="../video/FK3 - STALLION .mp4" type="video/mp4">
+                    <video preload="metadata" poster="videos/thumbnails/fk3-thumb.jpg">
+                        <source src="videos/FK3 - STALLION .mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                     <div class="play-button" aria-label="Play video">
@@ -132,8 +132,8 @@
             <!-- Project 5 - Logo Animation -->
             <div class="video-item" data-category="commercial">
                 <div class="video-thumbnail">
-                    <video preload="metadata" poster="../video/thumbnails/logo-animation-thumb.jpg">
-                        <source src="../video/LOGO FLIP ANIMATION IG.mp4" type="video/mp4">
+                    <video preload="metadata" poster="videos/thumbnails/logo-animation-thumb.jpg">
+                        <source src="videos/LOGO FLIP ANIMATION IG.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                     <div class="play-button" aria-label="Play video">
@@ -153,8 +153,8 @@
             <!-- Project 6 - Unilite MTB -->
             <div class="video-item" data-category="commercial">
                 <div class="video-thumbnail">
-                    <video preload="metadata" poster="../video/thumbnails/unilite-thumb.jpg">
-                        <source src="../video/UNILITE MTB - 5300.mp4" type="video/mp4">
+                    <video preload="metadata" poster="videos/thumbnails/unilite-thumb.jpg">
+                        <source src="videos/UNILITE MTB - 5300.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                     <div class="play-button" aria-label="Play video">
