added and replaced some videos

--- a/work.html
+++ b/work.html
@@ -154,7 +154,7 @@
             <div class="video-item" data-category="commercial">
                 <div class="video-thumbnail">
                     <video preload="metadata" poster="videos/thumbnails/unilite-thumb.jpg">
-                        <source src="videos/UNILITE MTB - 5300.mp4" type="video/mp4">
+                        <source src="videos/KAY SIMMIT - Proverbs.MP4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                     <div class="play-button" aria-label="Play video">
@@ -165,9 +165,9 @@
                     </div>
                 </div>
                 <div class="video-info">
-                    <h3>Unilite MTB</h3>
-                    <p>Dynamic product showcase featuring mountain biking equipment in action.</p>
-                    <span class="video-category">Commercial</span>
+                    <h3>Freestyling video</h3>
+                    <p>Dynamic video showcasing upcoming artist Kay Simmit/p>
+                    <span class="video-category">music-video</span>
                 </div>
             </div>
             
@@ -175,7 +175,7 @@
             <div class="video-item" data-category="commercial">
                 <div class="video-thumbnail">
                     <video preload="metadata" poster="videos/thumbnails/freedom-beer-thumb.jpg">
-                        <source src="videos/FREEDOM BEER.mp4" type="video/mp4">
+                        <source src="videos/922176132-cameraRoll.MP4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                     <div class="play-button" aria-label="Play video">
@@ -186,8 +186,8 @@
                     </div>
                 </div>
                 <div class="video-info">
-                    <h3>Freedom Beer Commercial</h3>
-                    <p>A dynamic commercial showcasing Freedom Beer's brand and product qualities.</p>
+                    <h3>Team Renegade</h3>
+                    <p>A dynamic commercial showcasing Team Renegade's training facility.</p>
                     <span class="video-category">Commercial</span>
                 </div>
             </div>
