--- a/work.html
+++ b/work.html
@@ -70,7 +70,7 @@
             <div class="video-item" data-category="commercial">
                 <div class="video-thumbnail">
                     <video preload="metadata" poster="videos/thumbnails/cafephilia-thumb.jpg">
-                        <source src="videos/CAFEPHILIA FINAL COMPLETIONE.mp4" type="video/mp4">
+                        <source src="videos/CAFEPHILIA FINAL COMPLETIONE.mp4" type="video/mp4"/>
                         Your browser does not support the video tag.
                     </video>
                     <div class="play-button" aria-label="Play video">
@@ -91,7 +91,7 @@
             <div class="video-item" data-category="event">
                 <div class="video-thumbnail">
                     <video preload="metadata" poster="videos/thumbnails/birthday-thumb.jpg">
-                        <source src="videos/AL'S 30TH BIRTHDAY FINISHED CG.mp4" type="video/mp4">
+                        <source src="videos/AL'S 30TH BIRTHDAY FINISHED CG.mp4" type="video/mp4"/>
                         Your browser does not support the video tag.
                     </video>
                     <div class="play-button" aria-label="Play video">
@@ -112,7 +112,7 @@
             <div class="video-item" data-category="music">
                 <div class="video-thumbnail">
                     <video preload="metadata" poster="videos/thumbnails/fk3-thumb.jpg">
-                        <source src="videos/FK3 - STALLION .mp4" type="video/mp4">
+                        <source src="videos/FK3 - STALLION .mp4" type="video/mp4"/>
                         Your browser does not support the video tag.
                     </video>
                     <div class="play-button" aria-label="Play video">
@@ -133,7 +133,7 @@
             <div class="video-item" data-category="commercial">
                 <div class="video-thumbnail">
                     <video preload="metadata" poster="videos/thumbnails/logo-animation-thumb.jpg">
-                        <source src="videos/LOGO FLIP ANIMATION IG.mp4" type="video/mp4">
+                        <source src="videos/LOGO FLIP ANIMATION IG.mp4" type="video/mp4"/>
                         Your browser does not support the video tag.
                     </video>
                     <div class="play-button" aria-label="Play video">
@@ -154,7 +154,7 @@
             <div class="video-item" data-category="commercial">
                 <div class="video-thumbnail">
                     <video preload="metadata" poster="videos/thumbnails/unilite-thumb.jpg">
-                        <source src="videos/KAY SIMMIT - Proverbs.MP4" type="video/mp4">
+                        <source src="videos/KAY SIMMIT - Proverbs.MP4" type="video/mp4"/>
                         Your browser does not support the video tag.
                     </video>
                     <div class="play-button" aria-label="Play video">
@@ -175,7 +175,7 @@
             <div class="video-item" data-category="commercial">
                 <div class="video-thumbnail">
                     <video preload="metadata" poster="videos/thumbnails/freedom-beer-thumb.jpg">
-                        <source src="videos/922176132-cameraRoll.MP4" type="video/mp4">
+                        <source src="videos/922176132-cameraRoll.MP4" type="video/mp4"/>
                         Your browser does not support the video tag.
                     </video>
                     <div class="play-button" aria-label="Play video">
